plugins {
    id 'java'
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation project(':lib')
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(8))
    }
}

application {
    //applicationDefaultJvmArgs = ['-XX:+UseConcMarkSweepGC', '-XX:+UseParallelGC']
    mainClassName = 'jg.sample.RMExamples'
}